--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -1,4 +1,5 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="cot.controller.Master" displayBlock="true">
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m"  xmlns:unified="sap.ui.unified"
+     controllerName="cot.controller.Master" displayBlock="true">
 	<Page id="page" title="{i18n>masterTitle}">
 		<headerContent>
 			<core:Icon id="masterIcon" src="sap-icon://alert" visible="{device>/isOffline}"/>
@@ -11,22 +12,20 @@
 			</Bar>
 		</subHeader>
 		<content>
-			<List id="list" items="{/ApprovalReqSet}" select="onSelect" mode="{device>/listMode}" noDataText="{i18n>masterListNoDataText}" >
+			<List id="list" items="{/ApprovalReqSet}" select="onSelect" swipe="handleSwipe"
+				mode="{device>/listMode}" 
+				noDataText="{i18n>masterListNoDataText}" >
 				<items>
 					<StandardListItem type="{device>/listItemType}" press="onSelect" detailPress="onAction" 
 						title="{approvalSubject}" 
 						description="{ApprovalSummary}"
 						icon="images/CAB.png"
 						iconDensityAware="false"
-						iconInset="false" 
-					>
-					</StandardListItem>
-					<!-- InputListItem label="Act"  visible="false" >
-						<content>
-							<Button text="Deny" press="deny" />
-							<Button text="Approve" press="approve"   />
-						</content>
-					</InputListItem -->
+						iconInset="false" />
+					<swipeContent>
+						<Button text="Deny"    press="deny"		type="Reject" />
+						<Button text="Approve" press="approve"  type="Accept" />
+				    </swipeContent>
 				</items>
 			</List>
 		</content>
