--- a/webapp/view/Splash.view.xml
+++ b/webapp/view/Splash.view.xml
@@ -1,9 +1,9 @@
 <mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:html="http://www.w3.org/1999/xhtml" controllerName="cot.controller.Splash">
 	<App>
 		<pages>
-			<Page title="Title">
+			<Page >
 				<content>
-				    <Image width="140px" height="140px" id="__image0" press="onPress" src="images/splash.png"/>
+				    <Image width="100%" height="100%" id="__image0" press="onPress" src="images/splash.png"/>
 				</content>
 			</Page>
 		</pages>
