--- a/webapp/view/Splash.view.xml
+++ b/webapp/view/Splash.view.xml
@@ -1,7 +1,7 @@
 <mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:html="http://www.w3.org/1999/xhtml" controllerName="cot.controller.Splash">
 	<App>
 		<pages>
-			<Page >
+			<Page showHeader="false">
 				<content>
 				    <Image width="100%" height="100%" id="__image0" press="onPress" src="images/splash.png"/>
 				</content>
